Make nav fixed on smaller screens

--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -7,10 +7,11 @@
 
   @include media(900px, 'max') {
     flex-direction: column;
+    padding-top: 66px;
   }
 
   &--sideNav {
-    z-index: 30;
+    z-index: 999999;
     position: relative;
   }
   &--content {
